infrastructure/databases/cloudnative-pg-apps-databases/fireflyiii/db-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: fireflyiii-database-netpol
spec:
  description: >
    Allow fireflyiii database cluster to:
      Egress to:
        - cloudflare  (S3 compatible storage)
        - kube-apiserver
        - kube-dns
      Ingress from:
        - fireflyiii app
        - cnpg operator
        - prometheus

  endpointSelector:
    matchLabels:
      cnpg.io/cluster: fireflyiii-database

  egress:
    - toCIDRSet:
      - cidr: 173.245.48.0/20
      - cidr: 103.21.244.0/22
      - cidr: 103.22.200.0/22
      - cidr: 103.31.4.0/22
      - cidr: 141.101.64.0/18
      - cidr: 108.162.192.0/18
      - cidr: 190.93.240.0/20
      - cidr: 188.114.96.0/20
      - cidr: 197.234.240.0/22
      - cidr: 198.41.128.0/17
      - cidr: 162.158.0.0/15
      - cidr: 104.16.0.0/13
      - cidr: 104.24.0.0/14
      - cidr: 172.64.0.0/13
      - cidr: 131.0.72.0/22

    - toEntities:
        - kube-apiserver

    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": kube-system
          "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
           - port: "53"
             protocol: ANY

  ingress:
    - fromEndpoints:
      - matchLabels:
          app: fireflyiii
          tier: core
          k8s:io.kubernetes.pod.namespace: fireflyiii

    - fromEndpoints:
      - matchLabels:
          app.kubernetes.io/name: prometheus
          k8s:io.kubernetes.pod.namespace: prometheus-stack

    - fromEndpoints:
      - matchLabels:
          app.kubernetes.io/instance: cloudnative-pg-operator
          app.kubernetes.io/name: cloudnative-pg
          k8s:io.kubernetes.pod.namespace: cloudnative-pg
